tests/snapshots/snapshot_golden_comprehensive__event_run_started.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "run_started",
  "message": "Starting execution"
}
