tests/snapshots/snapshot_golden_comprehensive__event_tool_call_basic.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "tool_call",
  "tool_name": "read_file",
  "tool_use_id": "tu_001",
  "parent_tool_use_id": null,
  "input": {
    "path": "src/auth.rs"
  }
}
