tests/snapshots/snapshot_golden_comprehensive__event_tool_call_nested.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "tool_call",
  "tool_name": "write_file",
  "tool_use_id": "tu_002",
  "parent_tool_use_id": "tu_001",
  "input": {
    "content": "fn main() {}",
    "path": "src/new.rs"
  }
}
