tests/snapshots/snapshot_golden_comprehensive__event_tool_result_success.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "tool_result",
  "tool_name": "read_file",
  "tool_use_id": "tu_001",
  "output": {
    "content": "fn main() { println!(\"hello\"); }"
  },
  "is_error": false
}
