tests/snapshots/snapshot_golden_comprehensive__event_with_ext_passthrough.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "assistant_message",
  "text": "hello",
  "ext": {
    "raw_message": {
      "content": "hello",
      "role": "assistant"
    },
    "vendor_id": "msg_abc123"
  }
}
