tests/snapshots/snapshot_golden_comprehensive__lane_patch_first.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "ExecutionLane::PatchFirst"
---
"patch_first"
