tests/snapshots/snapshot_golden_comprehensive__lane_workspace_first.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "ExecutionLane::WorkspaceFirst"
---
"workspace_first"
